# llm.rs

./: .gitignore  Cargo.toml  README.md  requirements.txt  run_on_modal.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/llmrs/: Cargo.toml  build.rs
crates/llmrs-dev/: Cargo.toml  build.rs  build_script
crates/llmrs-dev/cuda/: Makefile.lib  add.cu  encoder_forward.cu  matmul_forward.cu
crates/llmrs-dev/src/: common.rs  lib.rs
crates/llmrs/cuda/: Makefile.lib  adamw.cu  attention.cu  cublas_common.cu  cublas_common.h  cuda_common.h  cuda_globals.cu  cuda_utils.cu  cuda_utils.cuh  encoder.cu  fused_classifier.cu  gelu.cu  gelu.cuh  global_norm.cu  layernorm.cu  matmul.cu  matmul.h
crates/llmrs/src/: common.rs  cuda_launchers.rs  cuda_utils.rs  dataloader.rs  debug.rs  gpu_monitor.rs  lib.rs  logger.rs  outlier_detector.rs  random.rs  sampler.rs  scheduler.rs  tokenizer.rs  utils.rs
dev/cuda/: encoder_forward.cu
src/: dataloader.rs  lib.rs  tokenizer.rs
