[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"
authors = ["phildav"]

[features]
default = []
cuda = ["cust", "nvml-wrapper"]     # compile cuda/*.cu
bf16 = []
fp16 = []

[dependencies]
glob = "0.3.2"
rand_mt = "5.0.0"
rand = "0.8.5"
rayon = "1.10.0"
cust = { version = "0.3.2", optional = true }
nvml-wrapper = { version = "0.11.0", optional = true }

half = "2.6.0"
bytemuck = "1.23.2"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2.175"

[lib]
path = "src/lib.rs"

[[bin]]
name = "train_gpt2_cuda"
path = "src/bin/train_gpt2_cuda.rs"
required-features = ["cuda"]
